fixing the alignement for the footer links

--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -15,6 +15,7 @@
 
     &__icon {
         margin: 0px $spacing * 2 0px 0px;
+        width: 11px;
         color: $white;
     }
 
